remove long hyphens

--- a/public/demos/rast-cr/rast-c2-motor-intelligence.html
+++ b/public/demos/rast-cr/rast-c2-motor-intelligence.html
@@ -593,7 +593,7 @@
 
     <div class="footer" id="footer">
       <div style="min-width:0;">
-        <small><strong>Project Footer</strong> — Assumptions, Next step, Owner, Date</small>
+        <small><strong>Project Footer</strong> - Assumptions, Next step, Owner, Date</small>
         <div class="footerDetail" id="footerDetail"></div>
       </div>
       <button class="toggleFooter" id="toggleFooterBtn">Show details</button>
@@ -1253,7 +1253,7 @@
             <div style="font-family: var(--mono); font-size:12px; color: var(--muted2);">One minute demo</div>
             <div style="margin-top:8px; font-size:16px; line-height:1.45;">
                 Same person. Same task. Two conditions.<br/>
-                Motion changes—strategy can persist.
+                Motion changes. Strategy can persist.
             </div>
             <div style="margin-top:8px; font-size:13px; color: var(--muted); line-height:1.45;">
                 Simple sensors → inferred objectives + constraints → prediction under change.
@@ -1287,7 +1287,7 @@
         `,
         script:{
           vo:`We learn to move from age zero. Every movement reflects our body, our priorities, and our current conditions.`,
-          ons:`Same person. Same task. Two conditions. Motion changes—strategy can persist.`
+          ons:`Same person. Same task. Two conditions. Motion changes. Strategy can persist.`
         }
       },
       {
@@ -1354,7 +1354,7 @@
           </div>
         `,
         script:{
-          vo:`Change the condition and the movement changes. Yet some structure stays stable—like a fingerprint. Not just what you do, but why you do it.`,
+          vo:`Change the condition and the movement changes. Yet some structure stays stable, like a fingerprint. Not just what you do, but why you do it.`,
           ons:`Different motion. Stable trade-offs and control structure.`
         }
       },
@@ -1405,7 +1405,7 @@
           </div>
         `,
         script:{
-          vo:`Most systems stop at measurement: cadence, symmetry, range of motion. Useful—but they don’t tell you what the motor system is optimizing.`,
+          vo:`Most systems stop at measurement: cadence, symmetry, range of motion. Useful, but they don’t tell you what the motor system is optimizing.`,
           ons:`Traditional: outcomes. Novel: objective + constraints + prediction.`
         }
       },
@@ -1451,7 +1451,7 @@
           </div>
         `,
         script:{
-          vo:`To capture movement structure, we can’t look only at what’s visible. We infer the objective and constraints that generate the movement—using forward modeling and inverse optimal control.`,
+          vo:`To capture movement structure, we can’t look only at what’s visible. We infer the objective and constraints that generate the movement, using forward modeling and inverse optimal control.`,
           ons:`Show trade-offs, not raw motion. Anchor to OFC, forward prediction, levels of analysis.`
         }
       },
@@ -1518,7 +1518,7 @@
           </div>
         `,
         script:{
-          vo:`Here is the test. From Session 0, we predict how this person adapts when the condition changes. If we’re right, it’s not just a signature—it’s a generative model of behavior.`,
+          vo:`Here is the test. From Session 0, we predict how this person adapts when the condition changes. If we’re right, it’s not just a signature. It’s a generative model of behavior.`,
           ons:`Predicted vs actual overlay + one error metric vs baseline.`
         }
       },
@@ -1622,7 +1622,7 @@
           </div>
         `,
         script:{
-          vo:`When physiology changes—injury, stroke, or a prosthesis—the motion will change. But many priorities don’t. If we understand that signature, we can design training that is more effective, efficient, and safe.`,
+          vo:`When physiology changes - injury, stroke, or a prosthesis - the motion will change. But many priorities don’t. If we understand that signature, we can design training that is more effective, efficient, and safe.`,
           ons:`Close with one question. Keep it clinician-relevant.`
         }
       }
