--- a/public/demos/rast-cr/rast-cr-with-cmg.html
+++ b/public/demos/rast-cr/rast-cr-with-cmg.html
@@ -1167,7 +1167,7 @@
         leftTitle:"Value Proposition", rightTitle:"Next Steps", leftHint:"why it matters", rightHint:"what's next",
         left: makeClosePanel, right: makeValuePanel,
         bottomTitle:"Contact", bottomHint:"partnership",
-        bottom: ()=>`<div style="display:flex; align-items:center; gap:16px;"><span style="font-weight:600;">Nitsan Sharon</span><span style="color:var(--muted);">|</span><span>nitsan.sharon@yumaniq.com</span><span style="color:var(--muted);">|</span><span style="color:var(--accent);">yumaniq.com</span></div>`,
+        bottom: ()=>`<div style="display:flex; align-items:center; gap:16px;"><span style="color:var(--muted);">|</span><span>info@yumaniq.com</span><span style="color:var(--muted);">|</span><span style="color:var(--accent);">yumaniq.com</span></div>`,
         script:{ vo:`RAST-CR: Personalized cardiac rehabilitation with built-in safety and automatic documentation. We're piloting at Ziv Medical Center and partnering with Technion for research validation.`, ons:`Value props + contact. End with a clear call to action.` }
       }
     ];
