changed owner to Yumaniq

--- a/public/demos/rast-cr/rast-c2-motor-intelligence.html
+++ b/public/demos/rast-cr/rast-c2-motor-intelligence.html
@@ -1791,7 +1791,7 @@
     el("footerDetail").innerHTML = `
       <div><b>Assumptions:</b> Screen-recorded 75–90s demo; synthetic trajectories stand in for real sensor feeds; you will add your own voiceover; no clinical claims beyond “prediction-under-change” framing.</div>
       <div style="margin-top:6px;"><b>Next step:</b> Replace synthetic traces with your real sensor capture (if available) and tune the “Prediction error ↓” number to match your actual result or label as illustrative.</div>
-      <div style="margin-top:6px;"><b>Owner:</b> Nitsan</div>
+      <div style="margin-top:6px;"><b>Owner:</b> Yumaniq</div>
       <div style="margin-top:6px;"><b>Date:</b> 2026-01-15</div>
     `;
 
