--- a/public/demos/voice/rast-artech-voice.html
+++ b/public/demos/voice/rast-artech-voice.html
@@ -298,7 +298,7 @@
 <div class="header-left">
 <img class="header-logo-img" src="rast-logo-artech.png" alt="RAST" />
 <span class="header-sep">|</span>
-<span class="header-sub">Identity Pipeline Mockup</span>
+<span class="header-sub">Identity Pipeline Voice</span>
 </div>
 <div class="header-right">
 <div class="scorecard" id="scorecard">
